# smart_calc

./: Cargo.toml  README.md
src/: lib.rs
